# sparkle

./: .gitignore
apk/: local.properties
apk/app/: build.gradle
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/cpp/: CMakeLists.txt  main.cpp
apk/app/src/main/java/ru/evgeniy/andronix/: MainActivity.java  SparkleService.java
apk/app/src/main/res/layout/: activity_main.xml
apk/app/src/main/res/values/: strings.xml
compositor/gl/: compositor_gl.cpp
platform/: platform.h
platform/na/: platform_na.cpp  platform_na.h
were/src/: were_event_loop.cpp  were_timer.cpp
